--- a/src/main/resources/templates/Client.html
+++ b/src/main/resources/templates/Client.html
@@ -88,7 +88,7 @@
     </div>
 
     <div class="float-right">
-        <a th:href="@{/garage/clients/registration}" class="btn btn-primary create-car-button">Новий клієнт</a>
+        <a th:href="@{/garage/clients/add}" class="btn btn-primary create-car-button">Новий клієнт</a>
     </div>
 </div>
 </body>
