--- a/src/main/resources/templates/AutoPartsByCar.html
+++ b/src/main/resources/templates/AutoPartsByCar.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Auto Parts List</title>
+    <title>Історія обслуговування авто</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <style>
         body {
@@ -23,7 +23,7 @@
         }
 
         .create-car-button {
-            width: 130px;
+            width: 180px;
             margin-top: 10px;
         }
 
@@ -36,18 +36,19 @@
 <div class="container">
     <h1 class="text-center mb-4">Історія обслуговування авто</h1>
     <div id="partsList">
-        <div th:each="part : ${autoPartListByCar}">
+        <div th:each="serviceHistory : ${serviceHistories}">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title" th:text="${part.repairmentDate}"></h5>
-                    <p class="card-text" th:text="'Пробіг авто: ' + ${part.millage} + ' км'"></p>
-                    <p class="card-text" th:text="'Деталі: ' + ${part.autoPartDescription}"></p>
-                    <p class="card-text" th:text="'Ціна: ' + ${part.autoPartPrice} + ' грн'"></p>
+                    <h5 class="card-title" th:text="${serviceHistory.service_date}">Дата обслуговування</h5>
+                    <p class="card-text" th:text="'Пробіг авто: ' + ${serviceHistory.mileage} + ' км'"></p>
+                    <p class="card-text" th:text="'Деталі: ' + ${serviceHistory.description}"></p>
+                    <p class="card-text" th:text="'Ціна: ' + ${serviceHistory.price} + ' грн'"></p>
+                    <p class="card-text" th:text="'Наступне обслуговування: ' + ${serviceHistory.next_service_date}"></p>
 
-                    <form th:action="@{'/garage/clients/' + ${personId} + '/cars/' + ${carId} + '/autoPart/' + ${part.id} + '/delete'}"
-                          method="post" onsubmit="return confirm('Ви впевнені, що хочете видалити цю деталь?')">
-                        <!-- Add the hidden input to override the method to DELETE -->
-                        <input type="hidden" th:name="_method" th:value="DELETE" />
+                    <form th:action="@{'/garage/clients/' + ${clientId} + '/cars/' + ${carId} + '/service-history/' + ${serviceHistory.id} + '/delete'}"
+                          method="post" onsubmit="return confirm('Ви впевнені, що хочете видалити цей запис?')">
+                        <!-- Add hidden input to override the method to DELETE -->
+                        <input type="hidden" name="_method" value="DELETE"/>
                         <!-- Use the DELETE method for the form -->
                         <button type="submit" class="btn btn-danger">Видалити</button>
                     </form>
@@ -55,18 +56,10 @@
             </div>
         </div>
     </div>
-    <a th:href="@{'/garage/clients/' + ${personId} + '/cars'}" class="btn btn-primary create-car-button">Повернутися до
-        списку авто</a>
+    <a th:href="@{'/garage/clients/' + ${clientId} + '/cars'}" class="btn btn-primary create-car-button">Повернутися до списку авто</a>
     <div class="float-right">
-        <a th:href="@{/garage/clients/{personId}/cars/{carId}/create(personId=${personId}, carId=${carId})}"
-           class="btn btn-primary create-car-button">Нове обслуговування</a>
+        <a th:href="@{'/garage/clients/' + ${clientId} + '/cars/' + ${carId} + '/service-history/add'}" class="btn btn-primary create-car-button">Нове обслуговування</a>
     </div>
-
-    <script>
-        window.addEventListener("load", function () {
-        });
-    </script>
-
 </div>
 </body>
 </html>
