--- a/src/main/resources/templates/ClientCars.html
+++ b/src/main/resources/templates/ClientCars.html
@@ -49,6 +49,7 @@
         <div th:each="car : ${cars}" class="card">
             <div class="card-body">
                 <h5 class="card-title" th:text="${car.number}"></h5>
+                <p class="card-text" th:text="'Vin номер: ' + ${car.vin_code}"></p>
                 <p class="card-text" th:text="'Бренд: ' + ${car.brand}"></p>
                 <div class="float-right">
                     <!-- Формируем ссылку на детали машины -->
