--- a/src/main/resources/templates/CarCreatingPage.html
+++ b/src/main/resources/templates/CarCreatingPage.html
@@ -38,26 +38,23 @@
 <script>
     window.addEventListener('DOMContentLoaded', function () {
         var urlParts = window.location.pathname.split('/');
-        var clientId = urlParts[urlParts.length - 3]; // Извлечь значение clientId из текущего URL
-        var carForm = document.querySelector('#carForm'); // Найти форму по идентификатору
-        var clientIdField = document.querySelector('#clientId'); // Найти поле clientId по идентификатору
+        var clientId = urlParts[urlParts.length - 3];
+        var carForm = document.querySelector('#carForm');
+        var clientIdField = document.querySelector('#clientId');
 
-        // Установить значение clientId в поле clientId формы
         clientIdField.value = clientId;
 
-        // Перехватывать событие отправки формы
         carForm.addEventListener('submit', function (event) {
-            event.preventDefault(); // Отменить стандартное действие отправки формы
+            event.preventDefault();
 
-            var formData = new FormData(carForm); // Создать объект FormData для сбора данных формы
-            var xhr = new XMLHttpRequest(); // Создать объект XMLHttpRequest
+            var formData = new FormData(carForm);
+            var xhr = new XMLHttpRequest();
 
-            xhr.open('POST', '/garage/clients/' + clientId + '/cars'); // Установить URL и метод запроса
-            xhr.setRequestHeader('Content-Type', 'application/json'); // Установить заголовок Content-Type
+            xhr.open('POST', '/garage/clients/' + clientId + '/cars');
+            xhr.setRequestHeader('Content-Type', 'application/json');
 
             xhr.onreadystatechange = function () {
                 if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
-                    // Действия при успешной отправке формы
                     console.log('Car created successfully!');
                     showSuccessMessage();
                     setTimeout(redirectToCarsPage, 1500);
@@ -66,7 +63,6 @@
             xhr.send(JSON.stringify(Object.fromEntries(formData)));
         });
 
-        // Функция для показа всплывающего окна с сообщением "Успешно создано"
         function showSuccessMessage() {
             var successAlert = document.createElement('div');
             successAlert.classList.add('alert', 'alert-success');
@@ -76,7 +72,6 @@
             container.insertBefore(successAlert, carForm);
         }
 
-        // Функция для перенаправления на страницу со списком автомобилей
         function redirectToCarsPage() {
             window.location.href = '/garage/clients/' + clientId + '/cars';
         }
