--- a/src/main/resources/templates/ServiceHistoryByCar.html
+++ b/src/main/resources/templates/ServiceHistoryByCar.html
@@ -45,7 +45,7 @@
                     <p class="card-text" th:text="'Ціна: ' + ${serviceHistory.price} + ' грн'"></p>
                     <p class="card-text" th:text="'Наступне обслуговування: ' + ${serviceHistory.next_service_date}"></p>
 
-                    <form th:action="@{'/garage/clients/' + ${clientId} + '/cars/' + ${carId} + '/service-history/' + ${serviceHistory.id} + '/delete'}"
+                    <form th:action="@{'/garage/clients/' + ${ignoredClientId} + '/cars/' + ${carId} + '/service-history/' + ${serviceHistory.id} + '/delete'}"
                           method="post" onsubmit="return confirm('Ви впевнені, що хочете видалити цей запис?')">
                         <!-- Add hidden input to override the method to DELETE -->
                         <input type="hidden" name="_method" value="DELETE"/>
@@ -56,9 +56,9 @@
             </div>
         </div>
     </div>
-    <a th:href="@{'/garage/clients/' + ${clientId} + '/cars'}" class="btn btn-primary create-car-button">Повернутися до списку авто</a>
+    <a th:href="@{'/garage/clients/' + ${ignoredClientId} + '/cars'}" class="btn btn-primary create-car-button">Повернутися до списку авто</a>
     <div class="float-right">
-        <a th:href="@{'/garage/clients/' + ${clientId} + '/cars/' + ${carId} + '/service-history/add'}" class="btn btn-primary create-car-button">Нове обслуговування</a>
+        <a th:href="@{'/garage/clients/' + ${ignoredClientId} + '/cars/' + ${carId} + '/service-history/add'}" class="btn btn-primary create-car-button">Нове обслуговування</a>
     </div>
 </div>
 </body>
